force-app/main/default/objects/Application_Config__mdt/Application_Config__mdt.object-meta.xml
<CustomObject>
    <description>Global application configuration and branding for Lead Tracker. The Default record drives all org-wide settings. Override by creating additional records for tenant-specific configuration in multi-tenant deployments.</description>
    <label>Application Config</label>
    <pluralLabel>Application Configs</pluralLabel>
</CustomObject>