force-app/main/default/objects/Application_Config__mdt/fields/Auto_Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>Auto_Refresh_Interval__c</fullName>
    <description>How often (in seconds) the pipeline board automatically re-fetches lead data. Set 0 to disable auto-refresh. Recommended range: 60–600 seconds. Shorter intervals increase Apex callout volume.</description>
    <helpText>Pipeline board auto-refresh interval in seconds. Set 0 to disable. Default: 300 (5 minutes).</helpText>
    <label>Auto Refresh Interval</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>