force-app/main/default/objects/Application_Config__mdt/fields/Card_Density__c.field-meta.xml
<CustomField>
    <fullName>Card_Density__c</fullName>
    <description>Controls how much information is visible on each lead card without expanding it. Compact shows minimal info, Comfortable is the default balanced view, and Spacious shows full card detail by default. Accepted values: Compact | Comfortable | Spacious.</description>
    <helpText>Lead card information density: Compact, Comfortable (default), or Spacious.</helpText>
    <label>Card Density</label>
    <length>20</length>
    <type>Text</type>
</CustomField>