force-app/main/default/objects/Application_Config__mdt/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Organization display name shown in the app header, email templates, and exported reports. Never hardcode the company name in code — always read it from this field.</description>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>