force-app/main/default/objects/Application_Config__mdt/fields/Dashboard_Refresh_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Refresh_Minutes__c</fullName>
    <description>How often (in minutes) analytics dashboard charts re-query aggregated data. Separate from pipeline board refresh. Set 0 to disable. Recommended: 15–60 minutes.</description>
    <helpText>Dashboard chart refresh interval in minutes. Set 0 to disable auto-refresh on dashboards. Default: 15.</helpText>
    <label>Dashboard Refresh Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>