force-app/main/default/objects/Application_Config__mdt/fields/Default_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Default_Pipeline__c</fullName>
    <description>Pipeline_Type__c value that the board loads by default on app launch. Must exactly match a Pipeline_Stage__mdt.Pipeline_Type__c value. Users can switch pipelines if multiple are configured.</description>
    <label>Default Pipeline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>