force-app/main/default/objects/Application_Config__mdt/fields/Empty_State_Message__c.field-meta.xml
<CustomField>
    <fullName>Empty_State_Message__c</fullName>
    <description>Message displayed inside an empty pipeline stage column. Customizable per deployment to match organizational tone. If blank, the default Custom Label LT_No_Leads_Found is used.</description>
    <label>Empty State Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>