force-app/main/default/objects/Application_Config__mdt/fields/Theme_Color__c.field-meta.xml
<CustomField>
    <fullName>Theme_Color__c</fullName>
    <description>Primary brand color applied to the application header, primary buttons, and active state indicators. Set as a CSS custom property at the app shell level so all child components inherit it without code changes.</description>
    <label>Theme Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>